--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.2.5"
   },
+  "private": true,
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^9.4.0",
