--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -33,6 +33,8 @@
     "typechain": "^7.0.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "ganache": "^7.0.0",
     "redstone-evm-connector": "^2.1.9"
   }
