--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ganache": "^7.0.0",
+    "redstone-evm-connector": "^2.1.9"
   }
 }
