--- a/packages/cxchange-api/package.json
+++ b/packages/cxchange-api/package.json
@@ -9,6 +9,9 @@
   "author": "habibsentongo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5"
   }
 }
