--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.3.6",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
+    "hardhat-celo": "^0.0.3",
     "hardhat-deploy": "^0.11.12",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.7.21",
