--- a/packages/cxchange-api/package.json
+++ b/packages/cxchange-api/package.json
@@ -4,14 +4,18 @@
   "description": "The Backend for the cXchange DApp.",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "habibsentongo",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "validator": "^13.7.0",
     "mongoose": "^6.6.5"
   }
 }
