--- a/packages/cxchange-api/package.json
+++ b/packages/cxchange-api/package.json
@@ -10,12 +10,15 @@
   "author": "habibsentongo",
   "license": "ISC",
   "dependencies": {
+    "@celo/contractkit": "^2.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0",
-    "mongoose": "^6.6.5"
+    "web3": "^1.3.6"
   }
 }
