Get balances from contract for each user

--- a/packages/cxchange-api/.envexample
+++ b/packages/cxchange-api/.envexample
@@ -12,3 +12,8 @@ export DB_NAME="cxchange"
 # Contracts
 export XCHANGE_FACTORY_ADDRESS=0xF357118EBd576f3C812c7875B1A1651a7f140E9C
 export WALLET_IMP_ADDRESS=0xD28F3246f047Efd4059B24FA1fa587eD9fa3e77F
+
+# Alfajores
+export CUSD_ADDRESS=0x874069Fa1Eb16D44d622F2e0Ca25eeA172369bC1
+export CEUR_ADDRESS=0x10c892A6EC43a53E45D0B916B4b7D383B1b78C0F
+export CREAL_ADDRESS=0xE4D517785D091D3c54818832dB6094bcc2744545
