--- a/packages/cxchange-frontend/package.json
+++ b/packages/cxchange-frontend/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@redux-saga/simple-saga-monitor": "^1.1.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tabs": "^5.1.0"
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.3",
+    "react-tabs": "^5.1.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
